# d0da

./: README.md  pyproject.toml
.github/workflows/: publish.yml
d0da/: cli.py  d0da_feature.py  d0da_report.proto  d0da_report.py  d0da_report_pb2.py  device_linux.py  helper.py  hidraw.py
examples/: daytimecolor.py
test/: test_d0da_report.py  test_helper.py
