[tool.poetry]
name = "d0da"
version = "0.2.0"
description = "Wooting D0DA protocol"
authors = ["Dick Marinus"]
readme = "README.md"
packages = [ { include = "d0da" } ]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
protobuf = "^4.23.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
pytest = "^7.3.1"


[tool.poetry.group.linux.dependencies]
pyudev = "^0.24.1"
ioctl-opt = "^1.3"

[tool.poetry.scripts]
d0da-cli = 'd0da.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
