[tool.poetry]
name = "d0da"
version = "0.10.0"
description = "Wooting D0DA protocol"
authors = ["Dick Marinus"]
readme = "README.md"
packages = [ { include = "d0da" } ]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
protobuf = ">3.19"
pyudev = { version = "^0.24.1", optional = true }
ioctl-opt = { version = "^1.3", optional = true }

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
pytest = "^7.3.1"

[tool.poetry.extras]
linux = ["pyudev", "ioctl-opt"]

[tool.poetry.scripts]
d0da-cli = 'd0da.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
